AI Update 2 index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
               <p>Freelance iOS Developer specializing in Swift & SwiftUI. I build apps for clients and personal portfolio projects.</p>
             </div>
             <div class="col-5 col-12-medium">
-              <!-- Placeholder buttons (optional) -->
               <ul>
                 <li><a href="#projects" class="button large icon solid fa-arrow-circle-right">View My Work</a></li>
                 <li><a href="#contact" class="button alt large icon solid fa-envelope">Get in Touch</a></li>
@@ -51,6 +50,8 @@
           <header>
             <h2>Projects</h2>
           </header>
+
+          <!-- First Row -->
           <div class="row">
             <div class="col-4 col-12-medium">
               <section class="box feature">
@@ -91,6 +92,48 @@
               </section>
             </div>
           </div>
+
+          <!-- Second Row -->
+          <div class="row">
+            <div class="col-4 col-12-medium">
+              <section class="box feature">
+                <a href="#" class="image featured"><img src="images/app4.jpg" alt="App 4" /></a>
+                <div class="inner">
+                  <header>
+                    <h2>App Four</h2>
+                    <p>Portfolio Project</p>
+                  </header>
+                  <p>Description of app four. Highlight your problem-solving and SwiftUI implementation here.</p>
+                </div>
+              </section>
+            </div>
+
+            <div class="col-4 col-12-medium">
+              <section class="box feature">
+                <a href="#" class="image featured"><img src="images/app5.jpg" alt="App 5" /></a>
+                <div class="inner">
+                  <header>
+                    <h2>App Five</h2>
+                    <p>Freelance Work</p>
+                  </header>
+                  <p>Description of app five. Mention any APIs, frameworks, or iOS features you integrated.</p>
+                </div>
+              </section>
+            </div>
+
+            <div class="col-4 col-12-medium">
+              <section class="box feature">
+                <a href="#" class="image featured"><img src="images/app6.jpg" alt="App 6" /></a>
+                <div class="inner">
+                  <header>
+                    <h2>App Six</h2>
+                    <p>Contract / Client Work</p>
+                  </header>
+                  <p>Description of app six. Keep it concise, highlight your role and what makes this app unique.</p>
+                </div>
+              </section>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -101,10 +144,10 @@
             <div class="col-12">
               <section class="widget contact last">
                 <h3>Contact Me</h3>
-                <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+                <p>Email: <a href="mailto:John.newman920@icloud.com">John.newman920@icloud.com</a></p>
                 <ul>
-                  <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-                  <li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                  <li><a href="https://github.com/5wift-Hacker" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+                  <li><a href="https://www.linkedin.com/in/jnewmandev" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
                 </ul>
               </section>
             </div>
