--- a/index.html
+++ b/index.html
@@ -138,32 +138,34 @@
       </div>
 
       <!-- Contact -->
-      <div id="footer-wrapper">
-        <footer id="footer" class="container" id="contact">
-          <div class="row">
-            <div class="col-12">
-              <section class="widget contact last">
-                <h3>Contact Me</h3>
-                <p>Email: <a href="mailto:John.newman920@icloud.com">John.newman920@icloud.com</a></p>
-                <ul>
-                  <li><a href="https://github.com/5wift-Hacker" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-                  <li><a href="https://www.linkedin.com/in/jnewmandev" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-                </ul>
-              </section>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-12">
-              <div id="copyright">
-                <ul class="menu">
-                  <li>&copy; John Newman. All rights reserved.</li>
-                  <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </footer>
+      <!-- Contact -->
+<div id="footer-wrapper">
+  <footer id="footer" class="container">
+    <div class="row">
+      <div class="col-12">
+        <!-- Contact section now has the correct id -->
+        <section class="widget contact last" id="contact">
+          <h3>Contact Me</h3>
+          <p>Email: <a href="mailto:John.newman920@icloud.com">John.newman920@icloud.com</a></p>
+          <ul>
+            <li><a href="https://github.com/5wift-Hacker" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+            <li><a href="https://www.linkedin.com/in/jnewmandev" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+          </ul>
+        </section>
       </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div id="copyright">
+          <ul class="menu">
+            <li>&copy; John Newman. All rights reserved.</li>
+            <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+</div>
     </div>
 
     <!-- Scripts -->
@@ -175,3 +177,4 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
