--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Stitch Design</title>
+    <title>JNewmanDev</title>
     <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
     <link href="https://fonts.googleapis.com" rel="preconnect"/>
     <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
@@ -53,22 +53,21 @@
 <div class="flex min-h-screen">
 <aside class="fixed flex h-full w-72 flex-col border-r border-gray-200/50 bg-background-light dark:border-gray-700/50 dark:bg-background-dark">
 <div class="p-8">
-<h1 class="text-2xl font-bold text-gray-900 dark:text-white">Ethan Carter</h1>
-<p class="text-sm text-gray-500 dark:text-gray-400">iOS Developer</p>
+<h1 class="text-2xl font-bold text-gray-900 dark:text-white">my Work</h1>
 </div>
 <nav class="flex-1 px-6">
 <ul class="space-y-2">
 <li>
-<a class="block rounded px-4 py-2 text-sm font-medium text-gray-700 hover:bg-primary/10 dark:text-gray-300 dark:hover:bg-primary/20" href="#about">About Me</a>
+  <a class="block rounded px-4 py-2 text-sm font-medium text-gray-700 hover:bg-primary/10 dark:text-gray-300 dark:hover:bg-primary/20" style="font-family: Helvetica, sans-serif;" href="#about">John Newman, <span style="color: purple;">iOS Developer</span></a>
 </li>
 <li>
-<a class="block rounded px-4 py-2 text-sm font-medium text-gray-700 hover:bg-primary/10 dark:text-gray-300 dark:hover:bg-primary/20" href="#app1">App 1</a>
+<a class="block rounded px-4 py-2 text-sm font-medium text-gray-700 hover:bg-primary/10 dark:text-gray-300 dark:hover:bg-primary/20" href="#app1">Showcase 1</a>
 </li>
 <li>
-<a class="block rounded px-4 py-2 text-sm font-medium text-gray-700 hover:bg-primary/10 dark:text-gray-300 dark:hover:bg-primary/20" href="#app2">App 2</a>
+<a class="block rounded px-4 py-2 text-sm font-medium text-gray-700 hover:bg-primary/10 dark:text-gray-300 dark:hover:bg-primary/20" href="#app2">Showcase 2</a>
 </li>
 <li>
-<a class="block rounded px-4 py-2 text-sm font-medium text-gray-700 hover:bg-primary/10 dark:text-gray-300 dark:hover:bg-primary/20" href="#app3">App 3</a>
+<a class="block rounded px-4 py-2 text-sm font-medium text-gray-700 hover:bg-primary/10 dark:text-gray-300 dark:hover:bg-primary/20" href="#app3">Showcase 3</a>
 </li>
 </ul>
 </nav>
@@ -78,7 +77,7 @@
 <section class="mb-16 scroll-mt-24 fade-in-up" id="about">
 <h2 class="mb-4 text-3xl font-bold text-gray-900 dark:text-white">About Me</h2>
 <p class="text-base leading-relaxed text-gray-600 dark:text-gray-400">
-              I'm a passionate iOS developer with a focus on creating intuitive and engaging mobile experiences. With a background in computer science and a keen eye for design, I strive to build apps that are both functional and aesthetically pleasing. My portfolio showcases a range of projects, from utility apps to interactive games, each reflecting my commitment to quality and innovation.
+              I'm a passionate iOS developer with a focus on creating intuitive and engaging mobile experiences. I strive to build apps that are both functional and aesthetically pleasing. My portfolio showcases a range of projects, each reflecting my commitment to both functional and visual quality, as well as innovation.
             </p>
 </section>
 <div class="space-y-24">
@@ -133,3 +132,4 @@
 </script>
 </body>
 </html>
+
