--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <nav class="flex-1 px-6">
 <ul class="space-y-2">
 <li>
-  <a class="block rounded px-4 py-2 text-sm font-medium text-gray-700 hover:bg-primary/10 dark:text-gray-300 dark:hover:bg-primary/20" style="font-family: Helvetica, sans-serif;" href="#about">John Newman, <span style="color: purple;">iOS Developer</span></a>
+  <a class="block rounded px-4 py-2 text-sm font-medium text-gray-700 hover:bg-primary/10 dark:text-gray-300 dark:hover:bg-primary/20" style="font-family: Helvetica, sans-serif;" href="#about">About</a>
 </li>
 <li>
 <a class="block rounded px-4 py-2 text-sm font-medium text-gray-700 hover:bg-primary/10 dark:text-gray-300 dark:hover:bg-primary/20" href="#app1">Showcase 1</a>
@@ -75,7 +75,7 @@
 <main class="ml-72 flex-1 p-8">
 <div class="mx-auto max-w-4xl">
 <section class="mb-16 scroll-mt-24 fade-in-up" id="about">
-<h2 class="mb-4 text-3xl font-bold text-gray-900 dark:text-white">About Me</h2>
+<h2 class="mb-4 text-3xl font-bold text-gray-900 dark:text-white">John Newman, <span style="color: purple;">iOS Developer</span></h2>
 <p class="text-base leading-relaxed text-gray-600 dark:text-gray-400">
               I'm a passionate iOS developer with a focus on creating intuitive and engaging mobile experiences. I strive to build apps that are both functional and aesthetically pleasing. My portfolio showcases a range of projects, each reflecting my commitment to both functional and visual quality, as well as innovation.
             </p>
@@ -132,4 +132,5 @@
 </script>
 </body>
 </html>
+
 
